fix: defined a volume in compose file

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,21 @@
 services:
   postgres:
     image: 'postgres:latest'
+    container_name: 'database'
     environment:
       - 'POSTGRES_DB=tuum'
       - 'POSTGRES_PASSWORD=parool'
       - 'POSTGRES_USER=kasutaja'
+    volumes:
+      - postgres_container_data:/var/lib/postgresql/data
     ports:
-      - '5432'
+      - '5432:5432'
   rabbitmq:
     image: 'rabbitmq:latest'
     environment:
       - 'RABBITMQ_DEFAULT_PASS=parool'
       - 'RABBITMQ_DEFAULT_USER=kasutaja'
     ports:
-      - '5672'
+      - '5672:5672'
+volumes:
+  postgres_container_data:
