fix: fixed docker issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=TUUM
+
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/tuum
+
+spring.datasource.username=kasutaja
+spring.datasource.password=parool
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
