--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Test Database configuration
+spring.datasource.test.url=jdbc:h2:mem:testdb
+spring.datasource.test.driver-class-name=org.h2.Driver
+spring.datasource.test.username=kasutaja
+spring.datasource.test.password=parool
+
