feat: add unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Test Database configuration
-spring.datasource.test.url=jdbc:h2:mem:testdb
-spring.datasource.test.driver-class-name=org.h2.Driver
-spring.datasource.test.username=kasutaja
-spring.datasource.test.password=parool
-
+# RabbitMQ configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=kasutaja
+spring.rabbitmq.password=parool
